[package]
name = "eni-associations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-ec2 = "0.30.0"
aws-sdk-lambda = "0.30.0"
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
