[package]
name = "eni-associations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version= "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.6.0"
aws-sdk-lambda = "1.6.0"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
